# news2headline

./: .gitignore  README.md  evaluation_improvements.py  fix_wandb_warnings.py  model_improvements.py  pyproject.toml  training_improvements.py
.kiro/steering/: unsloth-best-practices.md
src/: PaperClean.ipynb  TinyLlama_(1.1B)-Alpaca.ipynb  evaluation_results.txt  unsloth_evaluation_results.json
